syntax = "proto3";

option go_package ="../../packages/core/app/grpc";

message InventoryName {
  string id = 1;
  string name = 2;
}

service UserGrpcService {
  rpc helperTest(EmptyRequest) returns (InventoryName) {}
}

message EmptyRequest {}